--- a/orders/templates/orders/order/create.html
+++ b/orders/templates/orders/order/create.html
@@ -1,12 +1,12 @@
 {% extends 'shop/base.html' %}
-
-{% block title %}Checkout{% endblock title %}
+{% load i18n %}
+{% block title %}{% trans "Checkout" %}{% endblock title %}
 
 {% block content %}
-    <h1>Checkout</h1>
+    <h1>{% trans "Checkout" %}</h1>
 
     <div class='order-info'>
-        <h3>Your order</h3>
+        <h3>{% trans "Your order" %}</h3>
         <ul>
             {% for item in cart %}
                 <li>
@@ -15,12 +15,12 @@
                 </li>
             {% endfor %}
         </ul>
-        <p>Total: ${{ cart.get_total_price }}</p>
+        <p>{% trans " Total" %}: ${{ cart.get_total_price }}</p>
     </div>
     
     <form action="" method="post" class="order-form">
         {{ form.as_p }}
-        <p><input type="submit" value="Place order"></p>
+        <p><input type="submit" value="{% trans "Place order" %}"></p>
         {% csrf_token %}
     </form>
 {% endblock content %}
